# bam2bax

./: BUILD.txt  CMakeLists.txt  README.md
src/: Bam2Bax.cpp  Bam2BaxConverter.cpp  Bam2BaxConverter.h  Bam2BaxInternal.h  CMakeLists.txt  RegionsAdapter.h  Settings.cpp  Settings.h  main.cpp
tests/: CMakeLists.txt  files.cmake
tests/example/: end-to-end.sh
tests/src/: TestConstants.h  TestData.h  test.cpp
